--- a/views/404.html
+++ b/views/404.html
@@ -18,5 +18,7 @@
     <script defer src="/solid.js"></script>
     <script defer src="/fontawesome.js"></script>
   </head>
-  <body></body>
+  <body>
+    <h1>404</h1>
+  </body>
 </html>
