--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,18 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: inherit;
+}
+
+html {
+  height: 100%;
+  overflow: hidden;
+  line-height: 1.5;
+  font-family: Helvetica, sans-serif;
 }
 
 body {
-  background-color: #333;
+  height: 100%;
+  overflow: auto;
+  box-sizing: border-box;
 }
