--- a/views/index.html
+++ b/views/index.html
@@ -11,12 +11,15 @@
       name="keywords"
       content="music, online, artist, artists, bands, free, opensource"
     />
+    <meta name="author" content="Kamil Herma" />
+    <link rel="icon" href="favicon.ico?v=1.1" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WalkMan || Everyday music online</title>
-    <link rel="stylesheet" href="/style.css" />
     <script defer src="/brands.js"></script>
     <script defer src="/solid.js"></script>
     <script defer src="/fontawesome.js"></script>
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body></body>
 </html>
