--- a/views/index.hbs
+++ b/views/index.hbs
@@ -21,5 +21,7 @@
     <script defer src="/fontawesome.js"></script>
     <link rel="stylesheet" href="/style.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Home</h1>
+  </body>
 </html>
