Add handlebars layouts

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,6 +13,7 @@
     />
     <meta name="author" content="Kamil Herma" />
     <link rel="icon" href="favicon.ico?v=1.1" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WalkMan || Everyday music online</title>
     <script defer src="/brands.js"></script>
@@ -21,11 +22,20 @@
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
-    <h1>Hello {{ name }}</h1>
+    <header>
+      <h1>WalkMan - free music app</h1>
+      <nav>
+        <a href="/">Home</a>
+        <a href="/playlists">Playlists</a>
+        <a href="/albums">Albums</a>
+        <a href="/artists">Artists</a>
+      </nav>
+    </header>
+
+    {{{body}}}
+
+    <footer>
+      <p>All rights reserved<p>
+    </footer>
   </body>
 </html>
-
-
-
-
-
