--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,19 @@
+/* ================= */
+/* Variables */
+/* ================= */
+
+:root {
+  --dark: #000;
+  --light: #fff;
+  --grey: #999;
+  --grey-light-1: #f4f4f4;
+  --grey-dark-1: #333;
+}
+
+/* ================= */
+/* Global */
+/* ================= */
+
 * {
   margin: 0;
   padding: 0;
