--- a/views/layouts/home.hbs
+++ b/views/layouts/home.hbs
@@ -19,23 +19,26 @@
     <script defer src="/brands.js"></script>
     <script defer src="/solid.js"></script>
     <script defer src="/fontawesome.js"></script>
-    <link rel="stylesheet" href="/style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.3.0/lib/p5.js"></script>
+
+    <link rel="stylesheet" href="/home.css" />
+    <link rel="stylesheet" href="/global.css" />
   </head>
   <body>
-    <header>
-      <h1>Welcome to WalkMan Music App</h1>
-      <nav>
-        <a href="/playlists">Playlists</a>
-        <a href="/albums">Albums</a>
-        <a href="/artists">Artists</a>
+    <header class='home__header'>
+      <a href="/"><span class="home__logo"><i class="fas fa-music fa-2x"></i> <h2>WalkMan</h2></span></a>
+      <nav class='home__nav'>
+        <a href="/login">Login</a>
+        <a href="/register">Register</a>
       </nav>
     </header>
-
-    {{{body}}}
-
-    <footer>
-      <p>All rights reserved<p>
+    <main class='home__main'>
+      {{{body}}}
+    </main>
+    <footer class='home__footer'>
+      <p class="home__footer--main">&copy; copyright 2021, Kamil Herma<p>
+      <p class="home__footer--sub">no spotify intended 😭 <p>
     </footer>
-    <script src="particles.js"></script>
+    <script defer src="particles.js"></script>
   </body>
 </html>
