--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -20,6 +20,8 @@
     <script defer src="/solid.js"></script>
     <script defer src="/fontawesome.js"></script>
     <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/global.css" />
+
   </head>
   <body>
     <header>
