--- a/views/register.hbs
+++ b/views/register.hbs
@@ -8,12 +8,12 @@
       <label for="password">Password</label>
       <input type="password" name="password" id="password" placeholder="******************" readonly>
     </div>
-    <div class="input__group input__checkbox">
-      <label for="remember">Remember me</label>
-      <input type="checkbox" name="remember" id="remember" value='remember' checked>
+    <div class="input__group">
+      <label for="password">Confirm</label>
+      <input type="password" name="password" id="password" placeholder="******************" readonly>
     </div>
     <div class="input__group">
-      <a class='btn' href='/playlists'>Login</a>
+      <a class='btn' href='/playlists'>Register</a>
     </div>
   </form>
 </div>
