--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,2 @@
-<html lang="en">
-  <h1>Welcome to WalkMan Music App</h1>
-</html>
+<h1>Welcome to <span class='title__darker'>Walk</span><span class='title__lighter'>Man</span> Music Player</h1>
+
