--- a/views/layouts/home.hbs
+++ b/views/layouts/home.hbs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
       content="Opensource online music application. Listen to your favorite artists online for free."
@@ -13,20 +14,23 @@
     />
     <meta name="author" content="Kamil Herma" />
     <link rel="icon" href="favicon.ico?v=1.1" />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WalkMan || Everyday music online</title>
+    <title>WalkMan || Everyday music player</title>
+    {{!-- Font Awesome --}}
     <script defer src="/brands.js"></script>
     <script defer src="/solid.js"></script>
     <script defer src="/fontawesome.js"></script>
+    {{!-- P5.js --}}
     <script src="https://cdn.jsdelivr.net/npm/p5@1.3.0/lib/p5.js"></script>
-
+    {{!-- Google fonts --}}
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Chango&display=swap" rel="stylesheet">   
+    {{!-- CSS --}}
     <link rel="stylesheet" href="/home.css" />
     <link rel="stylesheet" href="/global.css" />
   </head>
   <body>
     <header class='home__header'>
-      <a href="/"><span class="home__logo"><i class="fas fa-music fa-2x"></i> <h2>WalkMan</h2></span></a>
+      <a href="/"><span class="home__logo"><i class="fas fa-music fa-2x"></i> <h2><span class='title__darker'>Walk</span><span class='title__lighter'>Man</span></h2></span></a>
       <nav class='home__nav'>
         <a href="/login">Login</a>
         <a href="/register">Register</a>
