--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
       content="Opensource online music application. Listen to your favorite artists online for free."
@@ -13,24 +14,27 @@
     />
     <meta name="author" content="Kamil Herma" />
     <link rel="icon" href="favicon.ico?v=1.1" />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WalkMan || Everyday music online</title>
+    <title>WalkMan || Everyday music player</title>
+    {{!-- Font Awesome --}}
     <script defer src="/brands.js"></script>
     <script defer src="/solid.js"></script>
     <script defer src="/fontawesome.js"></script>
-    <link rel="stylesheet" href="/style.css" />
+    {{!-- Google fonts --}}
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Chango&display=swap" rel="stylesheet">  
+    {{!-- CSS --}}
+    <link rel="stylesheet" href="/home.css" />
     <link rel="stylesheet" href="/global.css" />
-
+  </head>
   </head>
   <body>
     <header>
       <h1>WalkMan - free music app</h1>
       <nav>
-        <a href="/">Home</a>
         <a href="/playlists">Playlists</a>
         <a href="/albums">Albums</a>
         <a href="/artists">Artists</a>
+        <a href="/">Logout</a>
       </nav>
     </header>
 
