Add app header layout

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -13,7 +13,7 @@
       <input type="password" name="password" id="password" placeholder="******************" readonly>
     </div>
     <div class="input__group">
-      <a class='btn' href='/playlists'>Register</a>
+      <a class='btn' href='/john-doe/playlists'>Register</a>
     </div>
   </form>
 </div>
