--- a/public/app.css
+++ b/public/app.css
@@ -11,4 +11,98 @@
   --grey-light-2: #dcdde1;
   --grey-dark-1: #111;
   --grey-dark-2: #718093;
+  --grey-dark-3: #222;
+}
+
+/* ================= */
+/* Global */
+/* ================= */
+.app__container {
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  grid-template: auto 1fr / auto 1fr auto;
+}
+
+/* ================= */
+/* Header */
+/* ================= */
+.app__header {
+  background-color: var(--dark);
+  grid-column: 2/4;
+  grid-row: 1/2;
+  min-height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-transform: uppercase;
+  color: var(--light);
+}
+
+.app__header a {
+  color: inherit;
+}
+
+.app__nav {
+  margin-left: 50px;
+}
+
+.app__nav > * {
+  margin: 0 10px;
+  padding: 10px 20px;
+  border-radius: 20px;
+  transition: all 0.2s;
+  font-weight: 700;
+}
+
+.app__nav .active {
+  background-color: var(--light);
+  color: var(--dark);
+}
+
+.app__header .user {
+  margin-right: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.user .user__icon {
+  margin-right: 10px;
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  border: 1px solid var(--grey);
+  border-radius: 50%;
+  background: url("https://images.pexels.com/photos/3992435/pexels-photo-3992435.jpeg?cs=srgb&dl=pexels-m%C3%A1ximo-3992435.jpg&fm=jpg")
+    no-repeat center center/cover;
+}
+
+/* ================= */
+/* Main */
+/* ================= */
+.app__main {
+  background-color: var(--grey-dark-1);
+  grid-column: 2/4;
+  grid-row: 2/4;
+}
+
+/* ================= */
+/* Aside */
+/* ================= */
+.app__aside {
+  background-color: var(--grey-dark-3);
+  grid-column: 1/2;
+  grid-row: 1/5;
+  min-width: 250px;
+}
+
+/* ================= */
+/* Music Player */
+/* ================= */
+.player__box {
+  background-color: var(--dark);
+  grid-column: 1/4;
+  grid-row: 4/5;
+  min-height: 120px;
 }
