--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -23,25 +23,41 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Chango&display=swap" rel="stylesheet">  
     {{!-- CSS --}}
-    <link rel="stylesheet" href="/home.css" />
+    <link rel="stylesheet" href="/app.css" />
     <link rel="stylesheet" href="/global.css" />
   </head>
   </head>
   <body>
-    <header>
-      <h1>WalkMan - free music app</h1>
-      <nav>
-        <a href="/playlists">Playlists</a>
-        <a href="/albums">Albums</a>
-        <a href="/artists">Artists</a>
-        <a href="/">Logout</a>
-      </nav>
-    </header>
-
-    {{{body}}}
-
-    <footer>
-      <p>All rights reserved<p>
-    </footer>
+    <div class="app__container">
+      <header class="app__header">
+        <nav class='app__nav'>
+          <a class='active' href="/john-doe/playlists">Playlists</a>
+          <a href="/john-doe/albums">Albums</a>
+          <a href="/john-doe/artists">Artists</a>
+        </nav>
+        <div class='user'>
+          <span class='user__icon'></span>
+          <a href="/">Logout</a>
+        </div>
+      </header>
+      <main class="app__main">{{{body}}}</main>
+      <aside class="app__aside">
+       <span class="home__logo">
+         <i class="fas fa-music fa-2x"></i>
+         <h2>
+           <span class='title__darker'>Walk</span>
+          <span class='title__lighter'>Man</span>
+        </h2>
+      </span>
+      </aside>
+      <div class="player__box">asdasd</div>
+    </div>
   </body>
 </html>
+
+
+{{!-- <header>
+      
+    </header>
+
+     --}}
