--- a/views/login.hbs
+++ b/views/login.hbs
@@ -13,7 +13,7 @@
       <input type="checkbox" name="remember" id="remember" value='remember' checked>
     </div>
     <div class="input__group">
-      <a class='btn' href='/playlists'>Login</a>
+      <a class='btn' href='/john-doe/playlists'>Login</a>
     </div>
   </form>
 </div>
