--- a/public/app.css
+++ b/public/app.css
@@ -12,6 +12,7 @@
   --grey-dark-1: #111;
   --grey-dark-2: #718093;
   --grey-dark-3: #222;
+  --grey-dark-4: #444;
 }
 
 /* ================= */
@@ -24,11 +25,21 @@
   grid-template: auto 1fr / auto 1fr auto;
 }
 
+button:focus {
+  outline-color: var(--light);
+}
+
+ul {
+  list-style: none;
+}
+
 /* ================= */
 /* Header */
 /* ================= */
 .app__header {
-  background-color: var(--dark);
+  background-color: var(--grey-dark-3);
+  border-bottom: 2px solid var(--grey-dark-4);
+  color: var(--light);
   grid-column: 2/4;
   grid-row: 1/2;
   min-height: 100px;
@@ -36,7 +47,6 @@
   align-items: center;
   justify-content: space-between;
   text-transform: uppercase;
-  color: var(--light);
 }
 
 .app__header a {
@@ -93,8 +103,9 @@
 .app__aside {
   background-color: var(--dark);
   grid-column: 1/2;
-  grid-row: 1/5;
+  grid-row: 1/4;
   min-width: 250px;
+  overflow: hidden;
 }
 
 .home__logo {
@@ -111,6 +122,14 @@
   justify-content: space-between;
   padding: 10px 20px;
   color: var(--grey-light-1);
+}
+
+.asice__playlist--list {
+  padding: 10px 20px;
+  color: var(--grey);
+  width: 100%;
+  height: 70%;
+  overflow: auto;
 }
 
 .playlists__title {
@@ -134,10 +153,6 @@
   border-radius: 5px;
 }
 
-.btn__create:focus {
-  outline-color: var(--light);
-}
-
 .btn__create:hover {
   background-color: rgba(255, 255, 255, 0.3);
 }
@@ -151,7 +166,96 @@
 /* ================= */
 .player__box {
   background-color: var(--grey-dark-3);
+  border-top: 2px solid var(--grey-dark-4);
+  color: var(--light);
   grid-column: 1/4;
   grid-row: 4/5;
   min-height: 120px;
+}
+
+.player__container {
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  height: 100%;
+}
+
+.player__info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 30px;
+}
+
+.player__info figure {
+  display: flex;
+  align-items: center;
+}
+.player__info figcaption {
+  margin-left: 20px;
+}
+
+.player__info img {
+  width: 70px;
+  height: 70px;
+}
+.player__info .author {
+  color: var(--grey);
+}
+
+.player__controll {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.player__bar {
+  width: 50%;
+  height: 5px;
+  background-color: var(--grey);
+  margin-top: 15px;
+}
+
+.player__buttons {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.btn_player--big {
+  width: 35px;
+  height: 35px;
+  border: none;
+  border-radius: 50%;
+  margin: 0 10px;
+  transition: all 0.2s;
+}
+
+.btn_player--big:hover {
+  transform: scale(1.1);
+}
+
+.btn_player--small {
+  border: none;
+  background: transparent;
+  color: var(--grey);
+  transition: all 0.2s;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.btn_player--small:hover {
+  background: rgba(255, 255, 255, 0.3);
+  color: var(--light);
+}
+
+.player__volume {
+  margin-right: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.player__volume--slider {
+  margin-left: 10px;
 }
