--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -50,8 +50,7 @@
         <div class="home__logo">
           <i class="fas fa-music fa-2x"></i>
           <h2>
-            <span class='title__darker'>Walk</span>
-            <span class='title__lighter'>Man</span>
+            <span class='title__darker'>Walk</span><span class='title__lighter'>Man</span>
           </h2>
         </div>
         <!-- Aside Playlists -->
@@ -62,10 +61,78 @@
           </button>
           <h3 class='playlists__title'>Playlists</h3>
         </div>
-        <div class="asice__playlist--list"></div>
+        <div class="asice__playlist--list">
+          <ul>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+          </ul>
+        </div>
       </aside>
       <!-- Music Player -->
-      <div class="player__box">asdasd</div>
+      <div class="player__box">
+        <div class="player__container">
+          <div class="player__info">
+            <figure>
+              <img src="https://images.pexels.com/photos/6195081/pexels-photo-6195081.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Trulli">
+              <figcaption>Down, down, down... <p class='author'><small>The awesome band</small></p></figcaption>
+            </figure>
+          </div>
+          <div class="player__controll">
+            <div class="player__buttons">
+              <button class="btn_player--small"><i class="fas fa-step-backward"></i></button>
+              <button class="btn_player--big"><i class="fas fa-pause"></i></button>
+              <button class="btn_player--small"><i class="fas fa-step-forward"></i></button>
+            </div>
+            <div class="player__bar">
+              <span class="player__bar--fill"></span>
+            </div>
+          </div>
+          <div class="player__volume">
+            <i class="fas fa-volume-up"></i>
+            <input class='player__volume--slider' type="range" id="volume" name="volume" min="0" max="10">
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
