Update aside scroll and item overflow

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -63,49 +63,33 @@
         </div>
         <div class="asice__playlist--list">
           <ul>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
-            <li>item</li>
+            <li class="asice__playlist--item"><a href="/john-doe/playlists"><img src="https://images.pexels.com/photos/6357190/pexels-photo-6357190.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="playlist 1"><p>MV | Jackub - Mix Text overflow</p></a></li>
+            <li class="asice__playlist--item"><a href="/john-doe/playlists"><img src="https://images.pexels.com/photos/6357190/pexels-photo-6357190.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="playlist 1"><p>MV | Jackub - Mix</p></a></li>
+            <li class="asice__playlist--item"><a href="/john-doe/playlists"><img src="https://images.pexels.com/photos/6357190/pexels-photo-6357190.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="playlist 1"><p>MV | Jackub - Mix</p></a></li>
+            <li class="asice__playlist--item"><a href="/john-doe/playlists"><img src="https://images.pexels.com/photos/6357190/pexels-photo-6357190.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="playlist 1"><p>MV | Jackub - Mix</p></a></li>
+            <li class="asice__playlist--item"><a href="/john-doe/playlists"><img src="https://images.pexels.com/photos/6357190/pexels-photo-6357190.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="playlist 1"><p>MV | Jackub - Mix</p></a></li>
+            <li class="asice__playlist--item"><a href="/john-doe/playlists"><img src="https://images.pexels.com/photos/6357190/pexels-photo-6357190.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="playlist 1"><p>MV | Jackub - Mix</p></a></li>
+            <li class="asice__playlist--item"><a href="/john-doe/playlists"><img src="https://images.pexels.com/photos/6357190/pexels-photo-6357190.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="playlist 1"><p>MV | Jackub - Mix</p></a></li>
+            <li class="asice__playlist--item"><a href="/john-doe/playlists"><img src="https://images.pexels.com/photos/6357190/pexels-photo-6357190.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="playlist 1"><p>MV | Jackub - Mix</p></a></li>
+            <li class="asice__playlist--item"><a href="/john-doe/playlists"><img src="https://images.pexels.com/photos/6357190/pexels-photo-6357190.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="playlist 1"><p>MV | Jackub - Mix</p></a></li>
+            <li class="asice__playlist--item"><a href="/john-doe/playlists"><img src="https://images.pexels.com/photos/6357190/pexels-photo-6357190.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="playlist 1"><p>MV | Jackub - Mix</p></a></li>
+            <li class="asice__playlist--item"><a href="/john-doe/playlists"><img src="https://images.pexels.com/photos/6357190/pexels-photo-6357190.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="playlist 1"><p>MV | Jackub - Mix</p></a></li>
+            <li class="asice__playlist--item"><a href="/john-doe/playlists"><img src="https://images.pexels.com/photos/6357190/pexels-photo-6357190.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="playlist 1"><p>MV | Jackub - Mix</p></a></li>
+            <li class="asice__playlist--item"><a href="/john-doe/playlists"><img src="https://images.pexels.com/photos/6357190/pexels-photo-6357190.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="playlist 1"><p>MV | Jackub - Mix</p></a></li>
+            <li class="asice__playlist--item"><a href="/john-doe/playlists"><img src="https://images.pexels.com/photos/6357190/pexels-photo-6357190.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="playlist 1"><p>MV | Jackub - Mix</p></a></li>
+            <li class="asice__playlist--item"><a href="/john-doe/playlists"><img src="https://images.pexels.com/photos/6357190/pexels-photo-6357190.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="playlist 1"><p>MV | Jackub - Mix</p></a></li>
+            <li class="asice__playlist--item"><a href="/john-doe/playlists"><img src="https://images.pexels.com/photos/6357190/pexels-photo-6357190.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="playlist 1"><p>MV | Jackub - Mix</p></a></li>
+            <li class="asice__playlist--item"><a href="/john-doe/playlists"><img src="https://images.pexels.com/photos/6357190/pexels-photo-6357190.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="playlist 1"><p>MV | Jackub - Mix</p></a></li>
+            <li class="asice__playlist--item"><a href="/john-doe/playlists"><img src="https://images.pexels.com/photos/6357190/pexels-photo-6357190.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="playlist 1"><p>MV | Jackub - Mix</p></a></li>
+            <li class="asice__playlist--item"><a href="/john-doe/playlists"><img src="https://images.pexels.com/photos/6357190/pexels-photo-6357190.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="playlist 1"><p>MV | Jackub - Mix</p></a></li>
+            <li class="asice__playlist--item"><a href="/john-doe/playlists"><img src="https://images.pexels.com/photos/6357190/pexels-photo-6357190.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="playlist 1"><p>MV | Jackub - Mix</p></a></li>
           </ul>
+        </div>
+        <div class='aside__link'>
+          <a href='/john-doe/playlists'>
+            <i class="fas fa-compact-disc"></i>
+            <span>Library</span>
+          </a>
         </div>
       </aside>
       <!-- Music Player -->
