--- a/public/app.css
+++ b/public/app.css
@@ -33,6 +33,26 @@ ul {
   list-style: none;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: var(--grey-light-1);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--grey);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--grey-dark-4);
+}
+
 /* ================= */
 /* Header */
 /* ================= */
@@ -131,6 +151,30 @@ ul {
   height: 70%;
   overflow: auto;
 }
+.asice__playlist--item p {
+  overflow: hidden;
+  display: inline-block;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 150px;
+}
+
+.asice__playlist--item a {
+  color: inherit;
+  display: flex;
+  align-items: center;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
+.asice__playlist--item a:hover {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.asice__playlist--item img {
+  width: 30px;
+  margin-right: 20px;
+}
 
 .playlists__title {
   text-transform: uppercase;
@@ -159,6 +203,31 @@ ul {
 
 .btn__text {
   margin-left: 10px;
+}
+
+.aside__link,
+.aside__link a {
+  color: var(--grey);
+  font-size: 20px;
+  text-transform: uppercase;
+}
+
+.aside__link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.aside__link a {
+  margin-top: 10px;
+  background-color: var(--light);
+  padding: 0 50px 0 45px;
+  border-radius: 10px;
+  transition: all 0.2s;
+}
+
+.aside__link a:hover {
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 /* ================= */
