--- a/public/app.css
+++ b/public/app.css
@@ -165,6 +165,7 @@ ul {
   align-items: center;
   padding: 5px 10px;
   border-radius: 5px;
+  transition: all 0.2s;
 }
 
 .asice__playlist--item a:hover {
