--- a/views/layouts/home.hbs
+++ b/views/layouts/home.hbs
@@ -34,6 +34,7 @@
       <nav class='home__nav'>
         <a href="/login">Login</a>
         <a href="/register">Register</a>
+        <a href="/contact">Contact</a>
       </nav>
     </header>
     <main class='home__main'>
