Add contact form styles

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,7 +13,7 @@
       content="music, online, artist, artists, bands, free, opensource"
     />
     <meta name="author" content="Kamil Herma" />
-    <link rel="icon" href="favicon.ico?v=1.1" />
+    <link rel="icon" href="/favicon.ico?v=1.1" />
     <title>WalkMan || Everyday music player</title>
     {{!-- Font Awesome --}}
     <script defer src="/brands.js"></script>
