--- a/public/home.css
+++ b/public/home.css
@@ -138,6 +138,46 @@ button {
   padding: 10px 20px;
 }
 
+.isError {
+  background: #fff;
+  color: #000;
+  border-left: 4px solid #111;
+  padding: 0.9rem 0.8rem;
+  margin: 1rem auto 1.5rem auto;
+  display: flex;
+  opacity: 1;
+  font-weight: lighter;
+  box-shadow: 0 0 0 rgba(0, 0, 0, 0.2);
+  max-width: 15rem;
+  border-radius: 4px;
+  background: #ff5d6c;
+  color: #fff;
+  border-color: #ea2027;
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
+  animation-duration: 1s;
+}
+
+.isSent {
+  background: #fff;
+  color: #000;
+  border-left: 4px solid #111;
+  padding: 0.9rem 0.8rem;
+  margin: 1rem auto 1.5rem auto;
+  display: flex;
+  opacity: 1;
+  font-weight: lighter;
+  box-shadow: 0 0 0 rgba(0, 0, 0, 0.2);
+  max-width: 15rem;
+  border-radius: 4px;
+  background: #26c281;
+  color: #fff;
+  border-color: #01916d;
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
+  animation-duration: 1s;
+}
+
 /* ================= */
 /* Footer */
 /* ================= */
