--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,5 +1,11 @@
 <div class="container__form">
-  <form class="main__form">
+  {{#if isSent}}
+  <div class="isSent">Message has been sent!</div>
+  {{/if}}
+  {{#if isError}}
+  <div class="isError">You can't leave empty fields!</div>
+  {{/if}}
+  <form action="/contact/send-message" method="POST" class="main__form">
     <div class="input__group">
       <label for="author">Name</label>
       <input type="text" name="author" id="author" />
