--- a/views/layouts/home.hbs
+++ b/views/layouts/home.hbs
@@ -21,6 +21,7 @@
     <script defer src="/fontawesome.js"></script>
     {{!-- P5.js --}}
     <script src="https://cdn.jsdelivr.net/npm/p5@1.3.0/lib/p5.js"></script>
+    <script defer src="/particles.js"></script>
     {{!-- Google fonts --}}
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Chango&display=swap" rel="stylesheet">   
@@ -44,6 +45,5 @@
       <p class="home__footer--main">&copy; copyright 2021, Kamil Herma<p>
       <p class="home__footer--sub">no spotify intended 😭 <p>
     </footer>
-    <script defer src="particles.js"></script>
   </body>
 </html>
