--- a/public/home.css
+++ b/public/home.css
@@ -85,6 +85,27 @@
   text-transform: uppercase;
 }
 
+.contact__form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 15px;
+}
+
+.contact__form .input__group {
+  margin: 20px 0;
+}
+
+.input__textarea,
+.input__btn {
+  grid-column: 1/3;
+}
+
+input[type="file"] {
+  background-color: var(--light);
+  color: var(--dark);
+  text-transform: uppercase;
+}
+
 .input__group {
   display: flex;
   flex-direction: column;
@@ -102,6 +123,7 @@
 input[type="email"],
 input[type="password"],
 input[type="text"],
+input[type="file"],
 textarea {
   width: 100%;
   padding: 10px;
@@ -138,44 +160,26 @@ button {
   padding: 10px 20px;
 }
 
-.isError {
-  background: #fff;
-  color: #000;
+.message {
   border-left: 4px solid #111;
   padding: 0.9rem 0.8rem;
   margin: 1rem auto 1.5rem auto;
   display: flex;
   opacity: 1;
-  font-weight: lighter;
-  box-shadow: 0 0 0 rgba(0, 0, 0, 0.2);
-  max-width: 15rem;
+  max-width: 500px;
   border-radius: 4px;
+}
+
+.isError {
   background: #ff5d6c;
   color: #fff;
   border-color: #ea2027;
-  -webkit-animation-name: fadeIn;
-  animation-name: fadeIn;
-  animation-duration: 1s;
 }
 
 .isSent {
-  background: #fff;
-  color: #000;
-  border-left: 4px solid #111;
-  padding: 0.9rem 0.8rem;
-  margin: 1rem auto 1.5rem auto;
-  display: flex;
-  opacity: 1;
-  font-weight: lighter;
-  box-shadow: 0 0 0 rgba(0, 0, 0, 0.2);
-  max-width: 15rem;
-  border-radius: 4px;
   background: #26c281;
   color: #fff;
   border-color: #01916d;
-  -webkit-animation-name: fadeIn;
-  animation-name: fadeIn;
-  animation-duration: 1s;
 }
 
 /* ================= */
