--- a/public/home.css
+++ b/public/home.css
@@ -165,6 +165,8 @@ button {
   padding: 0.9rem 0.8rem;
   margin: 1rem auto 1.5rem auto;
   display: flex;
+  align-items: center;
+  justify-content: space-evenly;
   opacity: 1;
   max-width: 500px;
   border-radius: 4px;
@@ -180,6 +182,10 @@ button {
   background: #26c281;
   color: #fff;
   border-color: #01916d;
+}
+
+.message__img {
+  max-width: 50px;
 }
 
 /* ================= */
